force-app/main/default/objects/Rower__c/Rower__c.object-meta.xml
<CustomObject>
    <label>Rower</label>
    <nameField>
        <label>Rower Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rowers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>