force-app/main/default/objects/Rower__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Competition Junior</fullName><default>false</default><label>Competition Junior</label></value>
            <value><fullName>Master</fullName><default>false</default><label>Master</label></value>
            <value><fullName>Leisure</fullName><default>false</default><label>Leisure</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>