force-app/main/default/objects/Rower__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Rowers</relationshipLabel>
    <relationshipName>Rowers</relationshipName>
    <type>Lookup</type>
</CustomField>